# usb-switch-controller

./: .envrc  .gitignore  README.md  flake.nix
firmware/: CMakeLists.txt
hardware/: README.md
host/: README.md
host/linux/: .gitignore  README.md  udisks.py  usb_utilities.py
host/linux/tools/: .gitignore  generate_types.sh
lsusb-reference/: README.md  lsusb-ref-connected.txt  lsusb-ref-disconnected.txt
